Change Mechanism of retrieving countryLanguages (using Reacive)

--- a/TwitteR Analysis MKH/www/css/tab1.css
+++ b/TwitteR Analysis MKH/www/css/tab1.css
@@ -10,7 +10,8 @@ hr{
 }
 
 #noTweetsSlider {
-    display:inline-block;
+    display: inline-block;
+    margin-top: -3%;
 }
 
 #shiny-notification-panel {
