--- a/TwitteR Analysis MKH/www/css/tab1.css
+++ b/TwitteR Analysis MKH/www/css/tab1.css
@@ -185,3 +185,7 @@ a[title='clear all layers.'], .leaflet-control-attribution {
     top: 10%;
     left: 33%;
 }
+
+#filterByMedia{
+  text-align:center;
+}
